--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "^2.1.4",
 		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-tooltip": "^1.1.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"framer-motion": "^11.17.0",
 		"lucide-react": "^0.471.0",
 		"next": "14.2.16",
 		"next-themes": "^0.4.4",
 		"react": "^18",
 		"react-dom": "^18",
 		"tailwind-merge": "^2.6.0",
-		"tailwindcss-animate": "^1.0.7"
+		"usehooks-ts": "^3.1.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
@@ -31,6 +33,7 @@
 		"eslint-config-next": "14.2.16",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5"
 	}
 }
